--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "css-loader": "^6.7.3",
+    "html-loader": "^4.2.0",
+    "postcss-loader": "^7.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
     "sass": "^1.58.0",
+    "sass-loader": "^13.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "url-loader": "^4.1.1"
   }
 }
