--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "classnames": "^2.3.2",
     "css-loader": "^6.7.3",
     "html-loader": "^4.2.0",
     "postcss-loader": "^7.0.2",
