--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
 		"classnames": "^2.3.2",
 		"css-loader": "^6.7.3",
 		"html-loader": "^4.2.0",
+		"javascript-time-ago": "^2.5.9",
 		"postcss-loader": "^7.0.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-responsive": "^9.0.2",
 		"react-scripts": "5.0.1",
+		"react-time-ago": "^7.2.1",
 		"sass": "^1.58.0",
 		"sass-loader": "^13.2.0",
 		"web-vitals": "^2.1.4"
@@ -24,7 +26,7 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-    "predeploy": "npm run build",
+		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
@@ -52,5 +54,4 @@
 		"url-loader": "^4.1.1"
 	},
 	"homepage": "https://qntek.github.io/react-comment-section"
-	
 }
